# spacecraft_reaction_sim

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: arm_controllers.yaml  controllers.yaml  trajectory_controllers.yaml
docs/: GNC_PLAN.md
launch/: spacecraft_arm_attitude_hold.launch.py  spacecraft_arm_gnc.launch.py  spacecraft_arm_manual.launch.py  spacecraft_arm_position_hold.launch.py  spacecraft_arm_rcs_pulse.launch.py  spacecraft_arm_trajectory.launch.py  spacecraft_arm_trajectory_gnc.launch.py  spacecraft_manual_torque.launch.py  spacecraft_reaction.launch.py
spacecraft_reaction_sim/: arm_position_hold.py  attitude_hold.py  reaction_experiment.py  spacecraft_gnc.py  thruster_pulse.py  wrench_allocator.py
test/: __init__.py  test_arm_position_hold.py  test_attitude_hold.py  test_reaction_experiment.py  test_spacecraft_gnc.py  test_thruster_pulse.py  test_wrench_allocator.py
urdf/: spacecraft_arm.urdf.xacro  spacecraft_reaction.urdf.xacro
worlds/: space_world.sdf
